--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "jquery": "^3.4.1",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
+    "requirejs": "^2.3.6",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
