added sequelize code and updated example.js with sequelize code

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "exampledb",
+    "database": "hot_loads_db",
     "host": "localhost",
     "dialect": "mysql"
   },
